--- a/client-side/style.css
+++ b/client-side/style.css
@@ -70,6 +70,9 @@ body {
 	color: black;
 	z-index: 2;
 }
+.AccountTab:not(.tab_selected) {
+	color: rgba(255, 255, 255, 0.5);
+}
 .AccountTab.tab_selected {
 	cursor: default;
 }
