--- a/client-side/style.css
+++ b/client-side/style.css
@@ -27,7 +27,7 @@ body {
 	top: 0px;
 	height: 30px;
 	width: 100%;
-	background-color: #000;
+	background-color: #ccc;
 }
 #MainWindow {
 	position:absolute;
@@ -139,7 +139,7 @@ body {
 	right: 0px;
 	height: 100%;
 	font-size: 15px;
-	background-color: #000;
+	background-color: #ccc;
 	color: #FFF;
 	border-width: 0px;
 	border-left: 1px solid #FFF;
@@ -148,7 +148,7 @@ body {
 	margin: 0px;
 }
 #accountButton:hover {
-	background-color: #555;
+	background-color: #aaa;
 }
 
 #AccountPanel {
@@ -171,7 +171,6 @@ body {
 	color: #000;
 	text-align: right;
 	font-size: 16px;
-	font-weight: bold;
 	padding: 10px;
 	cursor: pointer;
 }
@@ -179,7 +178,7 @@ body {
 	background-color: #BBB;
 }
 div#ap_delete_account {
-	color: #F00;
+	color: #c00;
 }
 
 
@@ -229,8 +228,8 @@ div#ap_delete_account {
 
 /*box color overrides*/
 #recipe_area .box {
-	background-color: #F99;
-	border: 2px solid #F99;
+	background-color: #9bf;
+	border: 2px solid #9bf;
 }
 #search_area .box {
 	background-color: #DDD;
@@ -242,18 +241,18 @@ div#ap_delete_account {
 }
 
 #menu_area .box_highlighted {
-	border: 2px solid gold;
+	border: 2px solid #68e;
 }
 
 #recipe_area .Xable.box:hover > .XButton, #recipe_area.expanded .Xable.box > .XButton {
-	border-left: 1px solid #F55;
+	border-left: 1px solid #68f;
 }
 #menu_area .Xable.box:hover > .XButton {
 	border-left: 1px solid #57F;
 }
 
 #menu_area .box_selected {
-	border: 2px solid #00F;
+	border: 2px solid #68e;
 }
 
 .ingr_box {
@@ -263,7 +262,7 @@ div#ap_delete_account {
 	font-size: 15px;
 	text-align: right;
 	display: inline-block;
-	background-color: #F99;
+	background-color: #9bf;
 	width: 0px;
 	padding: 2px 0px;
 	border-width: 0px;
@@ -288,7 +287,8 @@ div#ap_delete_account {
 #recipe_area {
 	display: flex;
 	flex: 0 0 200px;
-	background-color: #FF5555;
+	background-color: white;
+	opacity: 0.95;
 	flex-direction: column;
 }
 
@@ -301,14 +301,14 @@ div#ap_delete_account {
 }
 #meal_entry {
 	flex: 1 0 80px;
-	background-color: #FF5555;
-	border-bottom: 10px solid #FF0000;
+	background-color: white;
+	border-bottom: 10px solid whitesmoke;
 }
 #ingr_entry {
 	flex: 10 0 250px;
 	justify-content: flex-start;
 	padding-top: 10px;
-	border-bottom: 10px solid #FF0000;
+	border-bottom: 10px solid whitesmoke;
 	overflow: auto;
 }
 #tag_entry {
@@ -320,8 +320,8 @@ div#ap_delete_account {
 /* Input closet*/
 .node_input {
 	text-align: center;
-	background-color: #FF9999;
-	border: 2px solid #FF9999;
+	background-color: white;
+	border: 2px solid whitesmoke;
 	border-radius: 4px;
 	width: 150px;
 
@@ -358,7 +358,7 @@ div#ap_delete_account {
 
 /* meal entry*/
 .meal_button:hover {
-	background-color: #FF0000;
+	background-color: gold;
 }
 #remove_meal_button {
 	display: none;
@@ -378,7 +378,8 @@ div#ap_delete_account {
 	flex-direction: column;
 	align-items: center;
 
-	background-color: #F00;
+	background-color: white;
+	opacity: 0.95;
 	padding: 10px;
 }
 #recipe_area.expanded {
@@ -388,16 +389,16 @@ div#ap_delete_account {
 .instruction {
 	width: 100%;
 	height: 100%;
-	background-color: #F99;
-	border: 4px solid #F99;
+	background-color: white;
+	border: 4px solid whitesmoke;
 	-webkit-border-radius: 4px; /* no idea why the browsers need this!  Modern browsers should do fine with border-radius */
 	font-size: 15px;
 	overflow: auto;
 	resize: none;
 }
 .instruction:disabled {
-	background-color: #F00;
-	border: 4px solid #F00;
+	background-color: whitesmoke;
+	/*border: 4px solid #0e0;*/
 }
 
 
@@ -417,8 +418,6 @@ div#ap_delete_account {
 }
 
 .SearchTab {
-	font-family: "Times New Roman", Times, serif;
-	font-weight: bold;
 	text-align: center;
 	padding: 8px 6px;
 	border: none;
@@ -527,7 +526,6 @@ div#ap_delete_account {
 	background-color: #DDDDDD;
 	color: #000000;
 	text-align: center;
-	font-weight: bold;
 }
 
 
@@ -536,7 +534,8 @@ div#ap_delete_account {
 	padding: 10px;
 	flex: 1 0 200px;
 	display: flex;
-	background-color: #AAAAAA;
+	background-color: whitesmoke;
+	opacity: 0.85;
 	flex-direction: column;
 	align-items: flex-start;
 	flex-wrap: wrap;
@@ -548,11 +547,12 @@ div#ap_delete_account {
 
 /* Menu display area: includes meals and ingr lists */
 #menu_area {
-	background-color: #57F;
+	background-color: white;
+	opacity: 0.95;
 	display: flex;
 	flex-direction: column;
-	flex: 5 0 300px;
-	flex-basis: 300px;
+	flex: 5 0 100px;
+	flex-basis: 100px;
 }
 
 #mealChoices {
@@ -563,7 +563,7 @@ div#ap_delete_account {
 }
 #groceryList {
 	display: flex;
-	flex: 2 0 300px;
+	flex: 2 0 500px;
 	flex-direction: column;
 	align-items: center;
 }
@@ -572,8 +572,9 @@ div#ap_delete_account {
 	flex: 0 0 32px;
 	align-self: stretch;
 	line-height: 200%;
-	background-color: #1626FF;
-	color: #EEF;
+	background-color: whitesmoke;
+	opacity: 0.95;
+	color: #555;
 	text-align: center;
 }
 
